--- a/app/src/main/res/layout/fragment_proposal_one.xml
+++ b/app/src/main/res/layout/fragment_proposal_one.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.Tabs.Account.Account">
+    tools:context=".presentation.Proposal.ProposalOne">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
