--- a/app/src/main/res/layout/fragment_proposal_two.xml
+++ b/app/src/main/res/layout/fragment_proposal_two.xml
@@ -39,6 +39,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_margin="10dp"
+                        android:textSize="15dp"
                         android:text="@string/salePropTwo"
                         android:textColor="@android:color/holo_red_dark"/>
 
@@ -50,8 +51,9 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_margin="10dp"
+                        android:textSize="15dp"
                         android:text="@string/headerPropTwo"
-                        android:textColor="@color/orange"/>
+                        android:textColor="@color/white"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
@@ -60,6 +62,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_margin="10dp"
+                        android:textSize="15dp"
                         android:text="@string/descriptionProposal"
                         android:gravity="center_horizontal"
                         android:textColor="@color/white"/>
