--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -11,7 +11,7 @@
         android:layout_margin="5dp"
         app:strokeWidth="1dp"
         app:strokeColor="@android:color/black"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@android:color/holo_green_dark"
         app:cardElevation="0dp"
         android:focusable="true"
         android:checkable="true">
