--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/orange"
+                android:textColor="@color/green"
                 android:text="@string/mainHeader"/>
 
             <androidx.appcompat.widget.AppCompatTextView
