--- a/app/src/main/res/layout/fragment_proposal_one.xml
+++ b/app/src/main/res/layout/fragment_proposal_one.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
-                    android:background="@drawable/proposal">
+                    android:background="@drawable/black">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/propOneSale"
@@ -41,7 +41,7 @@
                         android:layout_margin="10dp"
                         android:textSize="15dp"
                         android:text="@string/salePropOne"
-                        android:textColor="@color/orange"/>
+                        android:textColor="@color/green"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/propOneHeader"
