--- a/app/src/main/res/layout/fragment_proposal_two.xml
+++ b/app/src/main/res/layout/fragment_proposal_two.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="10dp"
-                    android:background="@drawable/proposal">
+                    android:background="@drawable/black">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/propTwoSale"
@@ -41,7 +41,7 @@
                         android:layout_margin="10dp"
                         android:textSize="15dp"
                         android:text="@string/salePropTwo"
-                        android:textColor="@android:color/holo_red_dark"/>
+                        android:textColor="@color/green"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/propTwoHeader"
@@ -53,7 +53,7 @@
                         android:layout_margin="10dp"
                         android:textSize="15dp"
                         android:text="@string/headerPropTwo"
-                        android:textColor="@color/white"/>
+                        android:textColor="@android:color/holo_red_dark"/>
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
