--- a/app/src/main/res/layout/medicines_item.xml
+++ b/app/src/main/res/layout/medicines_item.xml
@@ -11,7 +11,7 @@
         android:layout_margin="5dp"
         app:strokeWidth="1dp"
         app:strokeColor="@android:color/black"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@android:color/holo_green_dark"
         app:cardElevation="0dp"
         android:focusable="true"
         android:checkable="true">
@@ -39,7 +39,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/descriptionMedications"
-                android:layout_width="wrap_content"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/nameMedications"
                 app:layout_constraintLeft_toRightOf="@id/imageMedications"
