--- a/app/src/main/res/layout/fragment_proposal_two.xml
+++ b/app/src/main/res/layout/fragment_proposal_two.xml
@@ -48,12 +48,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@id/propTwoSale"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        android:gravity="center"
                         android:layout_margin="10dp"
                         android:textSize="15dp"
                         android:text="@string/headerPropTwo"
-                        android:textColor="@android:color/holo_red_dark"/>
+                        android:textColor="@android:color/holo_red_dark"
+                        tools:ignore="MissingConstraints" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
